[package]
name = "superblockgame"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.10"
log = "0.4"
wgpu = "29.0.3"
pollster = "0.4.0"